jira-container/sts.yaml
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: jira
  namespace: jira-stack
spec:
  selector:
    matchLabels:
      app: jira
  serviceName: jira
  replicas: 1
  template:
    metadata:
      name: jira
      labels:
        app: jira
    spec:
      containers:
      - name: jira
        image: atlassian/jira-software:8.5.4-jdk8 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: jira
          containerPort: 40001
          name: jiraclusterport
        volumeMounts:
        - name: home
          mountPath: "/var/atlassian/application-data/jira"
        - name: jira-shared
          mountPath: "/var/atlassian/shared"
      volumes:
      - name: home
        emptyDir:
          {}
      - name: jira-shared
        persistentVolumeClaim:
          claimName: pv-claim-jira-shared
