jira-container/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jira
  name: jira
  namespace: jira-stack
spec:
  ports:
  - name: jira
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jira
  type: ClusterIP
  sessionAffinity: ClientIP
